--- a/JSON/apply.json
+++ b/JSON/apply.json
@@ -2,7 +2,7 @@
   "data": {
     "attributes": {
       "is-destroy":false,
-      "message": "Terraform Cloud API is Magic! ANWAR 🦄 🌈 🧙‍♂️"
+      "message": "Terraform Cloud API is Magic! ANWAR NEW🦄 🌈 🧙‍♂️"
     },
     "type":"runs",
     "relationships": {
